[package]
name = "solidus-ledger-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/common",
    "crates/config",
    "crates/ledger",
    "crates/net",
    "crates/pipeline",
    "crates/protocol",
    "crates/ringbuf",
    "crates/storage",
    "crates/integration_tests"
]

[workspace.dependencies]
mio = { version = "1.1.1", features = ["os-poll", "net"]}
libc = { version = "0.2.183" }
uuid = { version = "1.22.0", features = ["serde"] }
io-uring = "0.7.11"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.10.9"
chrono = "0.4.44"

[dependencies]
mio.workspace = true
net = { path = "crates/net" }
libc.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
protocol = { path = "crates/protocol" }
common = { path = "crates/common" }
config = { path = "crates/config" }
pipeline = { path = "crates/pipeline" }
ringbuf = { path = "crates/ringbuf" }
ledger = { path = "crates/ledger" }
storage = { path = "crates/storage" }
integration_tests = { path = "crates/integration_tests" }
sha2.workspace = true
chrono.workspace = true

[[bin]]
name = "rust-start"
path = "src/main.rs"