[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
libc.workspace = true
common = { path = "../common" }
ringbuf = { path = "../ringbuf" }
pipeline = { path = "../pipeline" }
io-uring.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
chrono.workspace = true
mio.workspace = true